@startuml

title __SERVICE's Class Diagram__\n

  namespace ub.edu.resources.service {
    interface ub.edu.resources.service.AbstractFactoryData {
        {abstract} + createDAOComarca()
        {abstract} + createDAOLocalitat()
        {abstract} + createDAOPersona()
        {abstract} + createDAORelacioRutaComarca()
        {abstract} + createDAORelacioRutaLocalitat()
        {abstract} + createDAORelacioTransportRuta()
        {abstract} + createDAORuta()
        {abstract} + createDAOTransport()
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.DataService {
        {static} - uniqueInstance : DataService
        + DataService()
        + getAllComarques()
        + getAllLocalitats()
        + getAllPersones()
        + getAllRelacionsRutesComarques()
        + getAllRelacionsRutesLocalitats()
        + getAllRelacionsRutesTransports()
        + getAllRutes()
        + getAllTransports()
        + getComarquesRuta()
        + getPersonaByUsername()
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.FactoryMOCK {
        {static} - uniqueInstance : FactoryMOCK
        + createDAOComarca()
        + createDAOLocalitat()
        + createDAOPersona()
        + createDAORelacioRutaComarca()
        + createDAORelacioRutaLocalitat()
        + createDAORelacioTransportRuta()
        + createDAORuta()
        + createDAOTransport()
        {static} + getInstance()
    }
  }
  

  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOComarca : daoComarca
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOLocalitat : daoLocalitat
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOPersona : daoPersona
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAORelacioLocalitatRuta : daoRelacioLocalitatRuta
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAORelacioComarcaRuta : daoRelacioRutaComarca
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAORelacioTransportRuta : daoRelacioTransportRuta
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAORuta : daoRuta
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOTransport : daoTransport
  ub.edu.resources.service.FactoryMOCK .up.|> ub.edu.resources.service.AbstractFactoryData


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
